--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Prashanna Sathiyamoorthy</a>
+                <a href="#" class="nav__logo">Unai Olloquiegui</a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
@@ -104,9 +104,9 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'am Prashanna</h1>
-                            <h3 class="home__subtitle">Data Analyst</h3>
-                            <p class="home__description">High level experience in data analitical knowledge and digital banking with quality work.</p>
+                            <h1 class="home__title">¡Hola, Soy Unai!</h1>
+                            <h3 class="home__subtitle">PORTFOLIO PERSONAL</h3>
+                            <p class="home__description">Este es mi portfolio personal..</p>
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
@@ -138,8 +138,8 @@
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">03+</span>
-                                <span class="about__info-name">Years <br> experience</span>
+                                <span class="about__info-title">04+</span>
+                                <span class="about__info-name">Años <br> desarrollando proyectos</span>
                             </div>
                             <div>
                                 <span class="about__info-title">05+</span>
