--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                             <h1 class="home__title">¡Hola, Soy Unai!</h1>
                             <h3 class="home__subtitle">PORTFOLIO PERSONAL</h3>
                             <p class="home__description">Este es mi portfolio personal..</p>
+                              <h1><a href="index.html">Prerak Raja</a></h1>
+      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <nav class="nav-menu d-none d-lg-block">
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
